Set height and width value for canvas id="scalevideo" to fix the issue

--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -224,7 +224,7 @@
               <canvas id ='canvasvideo'></canvas>
             </div>
             <video id='video' autoplay playsinline hidden></video>
-            <canvas hidden id = 'scalevideo'></canvas>
+            <canvas hidden id='scalevideo' width ='640' height ='480'></canvas>
           </div>
         </div>
       </div>
