Fix camera tab doesnt work issue when switching models, fix result area blink issue with sustained_speed backend

--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -293,7 +293,7 @@
               <div class='slidecontainer'><input type='range' min='0' max='100' value='0' class='slider' id='colorMapAlphaSlider'></div>
             </div>
 
-            <div class='row labels-wrapper'>
+            <div class='row labels-wrapper' id='labelitem'>
             </div>
           </div>
         </div>
