--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -46,19 +46,21 @@
           <div>
             <h4>Model</h4>
             <select id="modelName">
-              <option value="mobilenet_v1_1.0_224.tflite" selected>Mobilenet V1(TFlite)</option>
-              <option value="mobilenet_v2_1.0_224.tflite">Mobilenet V2(TFlite)</option>
-              <option value="inception_v3.tflite">Inception V3(TFlite)</option>
-              <option value="inception_v4.tflite">Inception V4(TFlite)</option>
+              <option value="mobilenet_v1_1.0_224.tflite" selected>Mobilenet v1(TFlite)</option>
+              <option value="mobilenet_v2_1.0_224.tflite">Mobilenet v2(TFlite)</option>
+              <option value="inception_v3.tflite">Inception v3(TFlite)</option>
+              <option value="inception_v4.tflite">Inception v4(TFlite)</option>
               <option value="squeezenet.tflite">Squeezenet(TFlite)</option>
-              <option value="inception_resnet_v2.tflite">Incep. Res. V2(TFlite)</option>
+              <option value="inception_resnet_v2.tflite">Inception Resnet v2(TFlite)</option>
               <option value="squeezenet1.1.onnx">SqueezeNet(Onnx)</option>
               <option value="mobilenetv2-1.0.onnx">Mobilenet v2(Onnx)</option>
               <option value="resnet50v1.onnx">ResNet50 v1(Onnx)</option>
               <option value="resnet50v2.onnx">ResNet50 v2(Onnx)</option>
               <option value="inceptionv2.onnx">Inception v2(Onnx)</option>
               <option value="densenet121.onnx">DenseNet(Onnx)</option>
-              <option value="ssd_mobilenet.tflite">SSD MobileNet(TFlite)</option>
+              <option value="ssd_mobilenet_v1.tflite">SSD MobileNet v1(TFlite)</option>
+              <option value="ssd_mobilenet_v2.tflite">SSD MobileNet v2(TFlite)</option>
+              <option value="ssdlite_mobilenet_v2.tflite">SSDLite MobileNet v2(TFlite)</option>
               <option value="posenet">PoseNet</option>
             </select>
           </div>
@@ -88,8 +90,8 @@
               <canvas id="canvas"></canvas>
               <img id="image" crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="../examples/image_classification/img/bee_eater.jpg">
               <img id="imageClassificationImage" hidden crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="../examples/image_classification/img/bee_eater.jpg">
-              <img id="poseImage" hidden  crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="../examples/posenet/download.png">
-              <img id="ssdMobileImage" hidden crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="../examples/ssd_mobilenet/img/image1.jpg">
+              <img id="poseImage" hidden  crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="../examples/skeleton_detection/img/download.png">
+              <img id="ssdMobileImage" hidden crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="../examples/object_detection/img/image1.jpg">
             </div>
             <div class="col">
             </div>
@@ -124,13 +126,12 @@
     <script src="../examples/util/onnx/OnnxModelUtils.js"></script>
     <script src="../examples/util/onnx/OnnxModelImporter.js"></script>
 
-    <script src="../examples/posenet/src/decodePose.js"></script>
-    <script src="../examples/posenet/src/helperFunc.js"></script>
-    <script src="../examples/posenet/utils.js"></script>
-    <script src="../examples/posenet/src/PoseNet.js"></script>
-    <script src="../examples/posenet/src/DrawOutputs.js"></script>
-    <script src="../examples/ssd_mobilenet/DrawOutputs.js"></script>
-    <script src="../examples/ssd_mobilenet/SsdMobileNet.js"></script>
+    <script src="../examples/skeleton_detection/src/decodePose.js"></script>
+    <script src="../examples/skeleton_detection/src/helperFunc.js"></script>
+    <script src="../examples/skeleton_detection/utils.js"></script>
+    <script src="../examples/skeleton_detection/src/PoseNet.js"></script>
+    <script src="../examples/skeleton_detection/src/DrawOutputs.js"></script>
+    <script src="../examples/util/decoders/SsdDecoder.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
