[example] Modify button(id="selectPrefer") style and model names           of Object Detection example.

--- a/examples/object_detection/camera.html
+++ b/examples/object_detection/camera.html
@@ -38,7 +38,7 @@
             <button class="dropdown-item disabled" type="button" id="webml">WebML</button>
           </div>
       </div>
-      <div class="btn-group prefer" style="display: none;">
+      <div class="btn-group prefer mr-1" style="display: none;">
         <button id="selectPrefer" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Setting...
         </button>
