Add link for models

--- a/examples/model.html
+++ b/examples/model.html
@@ -78,11 +78,11 @@
       </h2>
 
       <h4 class='text-center'>
-        Semantic Segmentation
+        <a href='image_classification/index.html'>Image Classification</a>
       </h4>
       <div class="table-responsive">
-        <table id='modelcv-ss' class='modelcv table table-borderless table-hover'>
-          <caption>Semantic Segmentation - Computer Vision based models</caption>
+        <table id='modelcv-ic' class='modelcv table table-borderless table-hover'>
+          <caption>Image Classification - Computer Vision based models</caption>
           <thead>
             <tr>
               <th scope='col'>Model</th>
@@ -99,28 +99,7 @@
       </div>
 
       <h4 class='text-center'>
-        Skeleton Detection
-      </h4>
-      <div class="table-responsive">
-        <table id='modelcv-hpe' class='modelcv table table-borderless table-hover'>
-          <caption>Skeleton Detection - Computer Vision based models</caption>
-          <thead>
-            <tr>
-              <th scope='col'>Model</th>
-              <th scope='col'>Format</th>
-              <th scope='col'>Size</th>
-              <th scope='col'>Paper</th>
-              <th scope='col' title='Netron Model Visualizer'>Netron</th>
-              <th scope='col'>Description</th>
-            </tr>
-          </thead>
-          <tbody>
-          </tbody>
-        </table>
-      </div>
-
-      <h4 class='text-center'>
-        Object Detection
+        <a href='object_detection/index.html'>Object Detection</a>
       </h4>
       <div class="table-responsive">
         <table id='modelcv-od' class='modelcv table table-borderless table-hover'>
@@ -141,11 +120,32 @@
       </div>
 
       <h4 class='text-center'>
-        Image Classification
+        <a href='skeleton_detection/index.html'>Skeleton Detection</a>
       </h4>
       <div class="table-responsive">
-        <table id='modelcv-ic' class='modelcv table table-borderless table-hover'>
-          <caption>Image Classification - Computer Vision based models</caption>
+        <table id='modelcv-hpe' class='modelcv table table-borderless table-hover'>
+          <caption>Skeleton Detection - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+
+      <h4 class='text-center'>
+        <a href='semantic_segmentation/index.html'>Semantic Segmentation</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-ss' class='modelcv table table-borderless table-hover'>
+          <caption>Semantic Segmentation - Computer Vision based models</caption>
           <thead>
             <tr>
               <th scope='col'>Model</th>
