--- a/examples/object_detection/index.html
+++ b/examples/object_detection/index.html
@@ -89,6 +89,12 @@
                   <input type='radio' class='d-none' name='m' id='ssdlite_mobilenet_v2_tflite' value='ssdlite_mobilenet_v2_tflite' checked>
                   <label id='l-ssdlite_mobilenet_v2_tflite' class='themodel' for='ssdlite_mobilenet_v2_tflite' title='SSDLite MobileNet v2'>SSDLite MobileNet
                     v2</label>
+                    <input type='radio' class='d-none' name='m' id='tiny_yolov2_coco_tflite' value='tiny_yolov2_coco_tflite' checked>
+                    <label id='l-tiny_yolov2_coco_tflite' class='themodel' for='tiny_yolov2_coco_tflite' title='Tiny Yolo v2 COCO'>Tiny Yolo v2
+                      COCO</label>
+                      <input type='radio' class='d-none' name='m' id='tiny_yolov2_voc_tflite' value='tiny_yolov2_voc_tflite' checked>
+                      <label id='l-tiny_yolov2_voc_tflite' class='themodel' for='tiny_yolov2_voc_tflite' title='Tiny Yolo v2 VOC'>Tiny Yolo v2
+                        VOC</label>
             </td>
           </tr>
           <tr class='backend'>
@@ -293,6 +299,7 @@
   <script src="../util/tflite/TfLiteModelUtils.js"></script>
   <script src="../util/tflite/TFliteModelImporter.js"></script>
   <script src="../util/decoders/SsdDecoder.js"></script>
+  <script src="../util/decoders/Yolo2Decoder.js"></script>
   <script src='utils.js'></script>
   <script src='main.js'></script>
   <script src='../util/uicommon.js'></script>
