--- a/examples/object_detection/index.html
+++ b/examples/object_detection/index.html
@@ -81,20 +81,15 @@
             <td>
               <img src='../static/img/l-tflite.png' alt='TensorFlow Lite Format' title='TensorFlow Lite Format'>
               <input type='radio' class='d-none' name='m' id='ssd_mobilenet_v1_tflite' value='ssd_mobilenet_v1_tflite' checked>
-              <label id='l-ssd_mobilenet_v1_tflite' class='themodel' for='ssd_mobilenet_v1_tflite' title='SSD MobileNet v1'>SSD MobileNet
-                v1</label>
-                <input type='radio' class='d-none' name='m' id='ssd_mobilenet_v2_tflite' value='ssd_mobilenet_v2_tflite' checked>
-                <label id='l-ssd_mobilenet_v2_tflite' class='themodel' for='ssd_mobilenet_v2_tflite' title='SSD MobileNet v2'>SSD MobileNet
-                  v2</label>
-                  <input type='radio' class='d-none' name='m' id='ssdlite_mobilenet_v2_tflite' value='ssdlite_mobilenet_v2_tflite' checked>
-                  <label id='l-ssdlite_mobilenet_v2_tflite' class='themodel' for='ssdlite_mobilenet_v2_tflite' title='SSDLite MobileNet v2'>SSDLite MobileNet
-                    v2</label>
-                    <input type='radio' class='d-none' name='m' id='tiny_yolov2_coco_tflite' value='tiny_yolov2_coco_tflite' checked>
-                    <label id='l-tiny_yolov2_coco_tflite' class='themodel' for='tiny_yolov2_coco_tflite' title='Tiny Yolo v2 COCO'>Tiny Yolo v2
-                      COCO</label>
-                      <input type='radio' class='d-none' name='m' id='tiny_yolov2_voc_tflite' value='tiny_yolov2_voc_tflite' checked>
-                      <label id='l-tiny_yolov2_voc_tflite' class='themodel' for='tiny_yolov2_voc_tflite' title='Tiny Yolo v2 VOC'>Tiny Yolo v2
-                        VOC</label>
+              <label id='l-ssd_mobilenet_v1_tflite' class='themodel' for='ssd_mobilenet_v1_tflite' title='SSD MobileNet v1'>SSD MobileNet v1</label>
+              <input type='radio' class='d-none' name='m' id='ssd_mobilenet_v2_tflite' value='ssd_mobilenet_v2_tflite' checked>
+              <label id='l-ssd_mobilenet_v2_tflite' class='themodel' for='ssd_mobilenet_v2_tflite' title='SSD MobileNet v2'>SSD MobileNet v2</label>
+              <input type='radio' class='d-none' name='m' id='ssdlite_mobilenet_v2_tflite' value='ssdlite_mobilenet_v2_tflite' checked>
+              <label id='l-ssdlite_mobilenet_v2_tflite' class='themodel' for='ssdlite_mobilenet_v2_tflite' title='SSDLite MobileNet v2'>SSDLite MobileNet v2</label>
+              <input type='radio' class='d-none' name='m' id='tiny_yolov2_coco_tflite' value='tiny_yolov2_coco_tflite' checked>
+              <label id='l-tiny_yolov2_coco_tflite' class='themodel' for='tiny_yolov2_coco_tflite' title='Tiny Yolo v2 COCO'>Tiny Yolo v2 COCO</label>
+              <input type='radio' class='d-none' name='m' id='tiny_yolov2_voc_tflite' value='tiny_yolov2_voc_tflite' checked>
+              <label id='l-tiny_yolov2_voc_tflite' class='themodel' for='tiny_yolov2_voc_tflite' title='Tiny Yolo v2 VOC'>Tiny Yolo v2 VOC</label>
             </td>
           </tr>
           <tr class='backend'>
@@ -216,7 +211,6 @@
                   </div>
                 </div>
               </div>
-              
             </div>
           </div>
         </div>
