[Example] Support Face Landmark Detection example

--- a/examples/index.html
+++ b/examples/index.html
@@ -232,8 +232,8 @@
               </div>
             </div>
             <div>
-              <h3 class='disabled'>
-                Facial Landmark Detection
+              <h3>
+                <a href='face_landmark_detection/index.html'>Facial Landmark Detection</a>
               </h3>
               <p>
                 <span class='wip'>WIP</span> Detecting facial landmarks like eyes, nose, mouth, etc., which can be used for web-based try-on
