[Example] Support Mobilenet V1/V2 Quant for Image Classification and SSD Mobilenet V1/V2 Quant for Object Detection

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -83,9 +83,15 @@
               <input type='radio' class='d-none' name='m' id='mobilenet_v1_tflite' value='mobilenet_v1_tflite' checked>
               <label id='l-mobilenet_v1_tflite' class='themodel' for='mobilenet_v1_tflite' title='MobileNet v1'>MobileNet
                 v1</label>
+              <input type='radio' class='d-none' name='m' id='mobilenet_v1_quant_tflite' value='mobilenet_v1_quant_tflite' checked>
+              <label id='l-mobilenet_v1_quant_tflite' class='themodel' for='mobilenet_v1_quant_tflite' title='MobileNet v1 Quant'>MobileNet
+                v1 Quant</label>
               <input type='radio' class='d-none' name='m' id='mobilenet_v2_tflite' value='mobilenet_v2_tflite'>
               <label id='l-mobilenet_v2_tflite' class='themodel' for='mobilenet_v2_tflite' title='MobileNet v2'>MobileNet
                 v2</label>
+              <input type='radio' class='d-none' name='m' id='mobilenet_v2_quant_tflite' value='mobilenet_v2_quant_tflite'>
+              <label id='l-mobilenet_v2_quant_tflite' class='themodel' for='mobilenet_v2_quant_tflite' title='MobileNet v2 Quant'>MobileNet
+                v2 Quant</label>
               <input type='radio' class='d-none' name='m' id='squeezenet_tflite' value='squeezenet_tflite'>
               <label id='l-squeezenet_tflite' class='themodel' for='squeezenet_tflite' title='SqueezeNet'>SqueezeNet</label>
               <input type='radio' class='d-none' name='m' id='inception_v3_tflite' value='inception_v3_tflite'>
