[Polyfill] Add util functions. Code clean

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -119,7 +119,7 @@
             </td>
           </tr>
           <tr class='backend'>
-            <th class='text-center'>Hybrid Backend</th>
+            <th class='text-center'>Backend</th>
             <td>
               <div class='g b-polyfill'>
                 <span>Polyfill</span>
@@ -143,27 +143,6 @@
       </table>
     </div>
   </form>
-
-  <div class="container supported-ops-select">
-    <div class="row small">
-      <button class="col-4 select-supported-ops" title="Select all WebNN supported ops of your platform">Select Supported</button>
-      <button class="col-4 uncheck-supported-ops" title="Uncheck all selected ops">Uncheck All</button>
-      <button class="col-4 update-supported-ops" title="Update the hybrid backend with selected ops">Update Backend</button>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="0"><span>ADD</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="10003"><span>ATROUS_CONV_2D</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="10004"><span>ATROUS_DEPTHWISE_CONV_2D</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="1"><span>AVERAGE_POOL_2D</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="2"><span>CONCATENATION</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="3"><span>CONV_2D</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="4"><span>DEPTHWISE_CONV_2D</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="9"><span>FULLY_CONNECTED</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="17"><span>MAX_POOL_2D</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="18"><span>MUL</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="22"><span>RESHAPE</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="23"><span>RESIZE_BILINEAR</span></label>
-      <label class="col-4"><input type="checkbox" name="supportedOp" value="25"><span>SOFTMAX</span></label>
-    </div>
-  </div>
 
   <section class='ic' id='ic'>
     <div class='container' id='container'>
