--- a/examples/face_landmark_detection/camera.html
+++ b/examples/face_landmark_detection/camera.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>WebML Face Landmark Detection Camera Demo</title>
+    <title>WebML Facial Landmark Detection Camera Demo</title>
     <link rel="stylesheet" href="../third_party/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
       video {
@@ -31,7 +31,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
-      <span class="navbar-brand mb-0 h1">WebML Face Landmark Detection Demo</span>
+      <span class="navbar-brand mb-0 h1">WebML Facial Landmark Detection Demo</span>
       <div class="btn-group mr-1">
           <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Setting...
