[examples] Code refactor for duplicate code issue in ui.js

--- a/examples/index.html
+++ b/examples/index.html
@@ -433,9 +433,10 @@
   </a>
 
   <script src='static/lib/jquery/jquery.min.js'></script>
+  <script src='static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
   <script src='static/lib/superfish/superfish.min.js'></script>
   <script src='static/lib/stickyjs/sticky.js'></script>
-  <script src='util/uicommon.js'></script>
+  <script src='static/js/uicommon.js'></script>
 
 </body>
 
