--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -369,7 +369,7 @@
   <script src='src/DrawOutputs.js'></script>
   <script src='utils.js'></script>
   <script src='main.js'></script>
-  <script src='../util/uicommon.js'></script>
+  <script src='../static/js/uicommon.js'></script>
   <script src='ui.js'></script>
 </body>
 
