--- a/examples/model.html
+++ b/examples/model.html
@@ -193,11 +193,12 @@
   </a>
 
   <script src='static/lib/jquery/jquery.min.js'></script>
+  <script src='static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
   <script src='static/lib/superfish/superfish.min.js'></script>
   <script src='static/lib/stickyjs/sticky.js'></script>
   <script src='../dist/webml-polyfill.js'></script>
   <script src='util/base.js'></script>
-  <script src='util/uicommon.js'></script>
+  <script src='static/js/uicommon.js'></script>
   <script src='static/js/model.js'></script>
 </body>
 
