--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -287,7 +287,7 @@
 
   <script src='utils.js'></script>
   <script src='main.js'></script>
-  <script src='../util/uicommon.js'></script>
+  <script src='../static/js/uicommon.js'></script>
   <script src='ui.js'></script>
 </body>
 
