[Example] rename the folder and update UI

--- a/examples/index.html
+++ b/examples/index.html
@@ -68,6 +68,7 @@
               <li><a href='object_detection/index.html'>Person/Object Detection</a></li>
               <li><a href='semantic_segmentation/index.html'>Semantic Segmentation</a></li>
               <li><a href='skeleton_detection/index.html'>Skeleton Detection</a></li>
+              <li><a href='facial_landmark_detection/index.html'>Facial Landmark Detection</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
@@ -233,7 +234,7 @@
             </div>
             <div>
               <h3>
-                <a href='face_landmark_detection/index.html'>Facial Landmark Detection</a>
+                <a href='facial_landmark_detection/index.html'>Facial Landmark Detection</a>
               </h3>
               <p>
                 <span class='wip'>WIP</span> Detecting facial landmarks like eyes, nose, mouth, etc., which can be used for web-based try-on
